dd-1375-flash-msgs fix flash message wrap

--- a/src/AppBundle/Resources/assets/scss/digideps/_flash-messages-top.scss
+++ b/src/AppBundle/Resources/assets/scss/digideps/_flash-messages-top.scss
@@ -9,7 +9,7 @@
     }
     
     .outer {
-        width: 30%;  
+        width: 40%;  
         margin: 0 auto; 
         padding: 10px 10px 1px 10px; 
 
@@ -18,6 +18,7 @@
             font-size: 1.5em; 
             font-weight: bold; 
             margin: 10px;
+            white-space:nowrap;
 
             &.success {
                 background: top left url("images/icons/savetick_white.png") no-repeat;
